force-app/main/default/objects/Grant_Product__c/Grant_Product__c.object-meta.xml
<CustomObject>
    <label>Grant Product</label>
    <nameField>
        <label>Grant Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>