force-app/main/default/objects/Grant_Product__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Grant__c.Amount__c</summarizedField>
    <summaryForeignKey>Grant__c.Grant_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>