force-app/main/default/objects/Grant_Product__c/validationRules/Maximum_Amount_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_Amount_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Maximum_Amount__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Maximum_Amount__c</errorDisplayField>
    <errorMessage>Maximum Amount must be positive</errorMessage>
</ValidationRule>