force-app/main/default/objects/Grant_Product__c/validationRules/Min_amount_must_be_less_than_max_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_amount_must_be_less_than_max_amount</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Amount__c &gt;  Maximum_Amount__c</errorConditionFormula>
    <errorDisplayField>Minimum_Amount__c</errorDisplayField>
    <errorMessage>Minimum amount must be less than maximum amount</errorMessage>
</ValidationRule>