force-app/main/default/objects/Grant_Product__c/validationRules/Minimum_amount_postive.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_amount_postive</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Amount__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Minimum_Amount__c</errorDisplayField>
    <errorMessage>Minimum Amount must be positive</errorMessage>
</ValidationRule>